Erros
MasterServer.java:458: error: run() in ClientHandler cannot implement run() in Runnable
	public void run() throws InterruptedException{	
	            ^
  overridden method does not throw InterruptedException
1 error
